[package]
name = "day7-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "day7_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor = ["anchor-lang/init_if_needed", "anchor-spl/metadata"]


[dependencies]
anchor-lang = {version= "0.31.0", features =["init_if_needed"]}
anchor-spl = {version= "0.31.0", features =["metadata"]}

